# Q3T_Sol_Baturalp

./: LICENSE  README.md
nft-staking/: README.md
nft-staking/07-escrow/anchor/: Anchor.toml
nft-staking/08-amm/anchor/: Anchor.toml
nft-staking/09-nft-staking/anchor/: Anchor.toml
nft-staking/10-nft-marketplace/anchor/: Anchor.toml  package-lock.json
nft-staking/11-random-number-game/anchor/: Anchor.toml
nft-staking/11-random-number-game/anchor/programs/random_number_game/: Cargo.toml
nft-staking/11-random-number-game/anchor/programs/random_number_game/src/: error.rs  lib.rs
nft-staking/11-random-number-game/anchor/programs/random_number_game/src/instructions/: init.rs  mod.rs  place_bet.rs  resolve_bet.rs
nft-staking/11-random-number-game/anchor/programs/random_number_game/src/state/: bet.rs
nft-staking/99-capstone/: copy_anchor_artifacts.sh
nft-staking/99-capstone/anchor/: Anchor.toml  package-lock.json
nft-staking/99-capstone/client-ts/: main.ts  package.json  pnpm-lock.yaml
nft-staking/99-capstone/frontend/: package.json  pnpm-lock.yaml  store.ts
nft-staking/ts/: package.json
nft-staking/ts/cluster1/: 01_spl_init.ts  02_spl_mint.ts  03_spl_metadata.ts  04_spl_transfer.ts  05_nft_image.ts  06_nft_metadata.ts  07_nft_mint.ts
solfi-monorepo-radar-hackathon/solfhe-analyzer/: Cargo.toml
ts/: package-lock.json  package.json
ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts  vault_deposit_spl.ts
vault/: Anchor.toml
vault/anchor/: Anchor.toml  package-lock.json
(+155 files in other folders)
